<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:text="Create Your Bio!!" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/fName_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fName" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:autofillHints=""
            android:hint="@string/fName"
            android:ems="10"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lName_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lName"/>

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:ems="10"
            android:autofillHints=""
            android:hint="@string/lName"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/school_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school" />

        <EditText
            android:id="@+id/editSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:hint="@string/school"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/gradYear_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradYear" />

        <EditText
            android:id="@+id/editGradYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:hint="@string/gradYear"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/degree_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Degree" />

        <EditText
            android:id="@+id/editDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:hint="@string/deg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/major_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Major" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginStart="108dp"
            android:entries="@array/spinnerItems"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/favActs_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favActs" />

        <EditText
            android:id="@+id/editFavActs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:hint="@string/favActs"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create"
            android:background="#770404"
            android:textColor="@color/white"
            />
    </LinearLayout>

</LinearLayout>